Disabled datadog mysql dbm

--- a/cookbooks/datadog/templates/etc/datadog-agent/conf.d/mysql.d/conf.yaml.erb
+++ b/cookbooks/datadog/templates/etc/datadog-agent/conf.d/mysql.d/conf.yaml.erb
@@ -274,7 +274,7 @@ instances:
     ## @param dbm - boolean - optional - default: false
     ## Set to `true` enable Database Monitoring.
     #
-    dbm: true
+    dbm: <%= node[:datadog][:mysql][:dbm] %>
 
     ## Configure collection of query metrics
     #
